--- a/index.html
+++ b/index.html
@@ -16,8 +16,6 @@
     <link rel="stylesheet" type="text/css" href="assets/css/bootstrap-datepicker.css">   
      <!-- Gallery Lightbox -->
     <link href="assets/css/magnific-popup.css" rel="stylesheet"> 
-    <!-- Theme color -->
-    <link id="switcher" href="assets/css/theme-color/default-theme.css" rel="stylesheet">     
 
     <link href="style.css" rel="stylesheet">    
    
@@ -40,13 +38,13 @@
   </head>
   <body>
 
-  <!--START SCROLL TOP BUTTON -->
+  <!-- scroll button -->
     <a class="scrollToTop" href="#">
       <i class="fa fa-angle-up"></i>
     </a>
-  <!-- END SCROLL TOP BUTTON -->
+  <!-- scroll button -->
 
-  <!-- Start header section -->
+  <!-- header -->
   <header id="gp-header">  
     <nav class="navbar navbar-default gp-main-navbar" role="navigation">  
       <div class="container">
@@ -64,21 +62,23 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul id="top-menu" class="nav navbar-nav navbar-right gp-main-nav">
-            <li><a href="index.html">HOME</a></li>
-            <li><a href="#gp-about-us">ABOUT US</a></li>                       
-            <li><a href="#gp-restaurant-menu">MENU</a></li>                       
-            <li><a href="#gp-reservation">RESERVATION</a></li>                       
+            <li><a href="index.html">Pizza</a></li>
+            <li><a href="#">Meniu</a></li>
+            <li><a href="#">Despre</a></li>
+            <li><a href="#">0724 77 00 07</a></li>
+            <!-- <li><a href="#gp-about-us">ABOUT US</a></li>
+            <li><a href="#gp-restaurant-menu">MENU</a></li>
+            <li><a href="#gp-reservation">RESERVATION</a></li>
             <li><a href="#gp-gallery">GALLERY</a></li>
-            <li><a href="#gp-chef">OUR CHEFS</a></li> 
-            <li><a href="#gp-contact">CONTACT</a></li> 
+            <li><a href="#gp-chef">OUR CHEFS</a></li>
+            <li><a href="#gp-contact">CONTACT</a></li> -->
           </ul>                            
-        </div><!--/.nav-collapse -->       
+        </div>
       </div>          
     </nav> 
   </header>
-  <!-- End header section -->
+  <!-- header -->
  
-
   <!-- Start slider  -->
   <section id="gp-slider">
     <div class="gp-slider-area"> 
