fade/scroll + css variables

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
   <!-- scroll button -->
     <a class="scrollToTop" href="#">
-      <i class="fa fa-angle-up"></i>
+      <i class="fa fa-angle-double-up align-items-center" style="margin-top: 10px;"></i>
     </a>
   <!-- scroll button -->
 
