--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
   <!-- scroll button -->
     <a class="scrollToTop" href="#">
-      <i class="fa fa-angle-double-up align-items-center" style="margin-top: 10px;"></i>
+      <i class="fa fa-angle-double-up" style="margin-top: 10px;"></i>
     </a>
   <!-- scroll button -->
 
@@ -63,9 +63,9 @@
         <div id="navbar" class="navbar-collapse collapse">
           <ul id="top-menu" class="nav navbar-nav navbar-right gp-main-nav">
             <li><a href="index.html">Pizza</a></li>
-            <li><a href="#">Meniu</a></li>
-            <li><a href="#">Despre</a></li>
-            <li><a href="#">0724 77 00 07</a></li>
+            <li><a href="pizza.html">Meniu</a></li>
+            <li><a href="meniu.html">Despre</a></li>
+            <li><a href="despre.html">0724 77 00 07</a></li>
             <!-- <li><a href="#gp-about-us">ABOUT US</a></li>
             <li><a href="#gp-restaurant-menu">MENU</a></li>
             <li><a href="#gp-reservation">RESERVATION</a></li>
@@ -1346,32 +1346,46 @@
 
   <!-- Start Map section -->
   <section id="gp-map">
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d9207.358598888495!2d-85.64847801496286!3d30.183918972289003!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0000000000000000%3A0x2320479d70eb6202!2sDillard&#39;s!5e0!3m2!1sbn!2sbd!4v1462359735720" width="100%" height="100%" frameborder="0"allowfullscreen></iframe>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4800.953969488684!2d23.864789293730933!3d44.31685116449237!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4752d755d159f809%3A0x7858b5947b3c184d!2sGarden%20Pizza!5e0!3m2!1sen!2sro!4v1569175805114!5m2!1sen!2sro" width="100%" height="100%" frameborder="0" allowfullscreen=""></iframe>
   </section>
   <!-- End Map section -->
 
-  <!-- Start Footer -->
+  <!-- footer -->
   <footer id="gp-footer">
     <div class="container">
       <div class="row">
         <div class="col-md-12">
-        <div class="gp-footer-area">
-           <div class="gp-footer-social">
-            <a href="#"><span class="fa fa-facebook"></span></a>
-            <a href="#"><span class="fa fa-twitter"></span></a>
-            <a href="#"><span class="fa fa-google-plus"></span></a>
-            <a href="#"><span class="fa fa-linkedin"></span></a>
-            <a href="#"><span class="fa fa-youtube"></span></a>
+          <div class="gp-footer-area">
+            <div class="col-md-12 no-padding">
+              <div class="col-md-4">
+
+              </div>
+              <div class="col-md-4">
+
+              </div>
+              <div class="col-md-4">
+
+              </div>
+            </div>
+            <div class="col-md-12 no-padding gp-footer-end">
+              <div class="gp-footer-copyright">
+                <p class="no-margin">&copy; 2019 Garden Pizza Craiova.</p>
+              </div>
+              <div class="gp-footer-social">
+                <a href="https://www.facebook.com/Garden-Pizza-462083171257729/"><span
+                    class="fa fa-facebook"></span></a>
+                <a href="https://website-4138154070103958998182-pizzarestaurant.business.site"><span
+                    class="fa fa-google-plus"></span></a>
+                <a href="#"><span class="fa fa-instagram"></span></a>
+              </div>
+            </div>
+
           </div>
-          <div class="gp-footer-copyright">
-            <p>&copy; Copyright <a rel="nofollow" href="http://markups.io">markups.io</a>. All right reserved.</p>
-          </div>         
         </div>
-      </div>
       </div>
     </div>
   </footer>
-  <!-- End Footer -->
+  <!-- footer -->
   
   <!-- jQuery library -->
   <script src="assets/js/jquery.min.js"></script>  
