--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul id="top-menu" class="nav navbar-nav navbar-right gp-main-nav">
-            <li><a href="index.html">Pizza</a></li>
-            <li><a href="pizza.html">Meniu</a></li>
-            <li><a href="meniu.html">Despre</a></li>
-            <li><a href="despre.html">0724 77 00 07</a></li>
+            <li><a href="pizza.html">Pizza</a></li>
+            <li><a href="meniu.html">Meniu</a></li>
+            <li><a href="despre.html">Despre</a></li>
+            <li><a href="">0724 77 00 07</a></li>
             <!-- <li><a href="#gp-about-us">ABOUT US</a></li>
             <li><a href="#gp-restaurant-menu">MENU</a></li>
             <li><a href="#gp-reservation">RESERVATION</a></li>
@@ -1356,27 +1356,33 @@
       <div class="row">
         <div class="col-md-12">
           <div class="gp-footer-area">
-            <div class="col-md-12 no-padding">
-              <div class="col-md-4">
-
+            <div class="col-md-12 no-padding text-center" style="font-weight: bold; margin-bottom: 16px;">
+              <div class="col-md-4 column-footer">
+                  <h2 style="font-weight: bold;">Program</h2>
+                  <p><span class="fa fa-clock-o"></span> Zilnic: 10 - 22</p>
+                  <p>Weekend: 10 - 23</p>
               </div>
-              <div class="col-md-4">
-
+              <div class="col-md-4 column-footer">
+                  <h2 style="font-weight: bold;">Contact</h2>
+                <p><span class="fa fa-phone"></span> 0724 77 00 07</p>
               </div>
-              <div class="col-md-4">
-
+              <div class="col-md-4 column-footer">
+                  <h2 style="font-weight: bold;">Adres&#259;</h2>
+                  <p><span class="fa fa-map-marker"></span> Str. Viitorului, nr. 24C</p>
+                  <p>(vis-a-vis de Piscina Noa)</p>
               </div>
             </div>
-            <div class="col-md-12 no-padding gp-footer-end">
+            <div class="col-md-12 no-padding gp-footer-end" style="padding-top: 16px;">
               <div class="gp-footer-copyright">
                 <p class="no-margin">&copy; 2019 Garden Pizza Craiova.</p>
               </div>
               <div class="gp-footer-social">
-                <a href="https://www.facebook.com/Garden-Pizza-462083171257729/"><span
-                    class="fa fa-facebook"></span></a>
-                <a href="https://website-4138154070103958998182-pizzarestaurant.business.site"><span
-                    class="fa fa-google-plus"></span></a>
-                <a href="#"><span class="fa fa-instagram"></span></a>
+                <a href="https://www.facebook.com/Garden-Pizza-462083171257729/">
+                <span class="fa fa-facebook"></span></a>
+                <a href="https://website-4138154070103958998182-pizzarestaurant.business.site">
+                <span class="fa fa-google-plus"></span></a>
+                <a href="#">
+                <span class="fa fa-instagram"></span></a>
               </div>
             </div>
 
