--- a/despre.html
+++ b/despre.html
@@ -53,8 +53,8 @@
                     <ul id="top-menu" class="nav navbar-nav navbar-right gp-main-nav">
                         <li><a href="pizza.html">Pizza</a></li>
                         <li><a href="meniu.html">Meniu</a></li>
-                        <li><a href="despre.html">Despre</a></li>
-                        <li><a href="">0724 77 00 07</a></li>
+                        <li><a class="active">Despre</a></li>
+                        <li><a href="tel: +40724770007">0724 77 00 07</a></li>
                         <!-- <li><a href="#gp-about-us">ABOUT US</a></li>
             <li><a href="#gp-restaurant-menu">MENU</a></li>
             <li><a href="#gp-reservation">RESERVATION</a></li>
