--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                         <li><a href="pizza.html">Pizza</a></li>
                         <li><a href="meniu.html">Meniu</a></li>
                         <li><a href="despre.html">Despre</a></li>
-                        <li><a href="">0724 77 00 07</a></li>
+                        <li><a href="tel: +40724770007">0724 77 00 07</a></li>
                         <!-- <li><a href="#gp-about-us">ABOUT US</a></li>
             <li><a href="#gp-restaurant-menu">MENU</a></li>
             <li><a href="#gp-reservation">RESERVATION</a></li>
@@ -1524,7 +1524,7 @@
                             </div>
                             <div class="col-md-4 column-footer">
                                 <h2 style="font-weight: bold;">Contact</h2>
-                                <p><span class="fa fa-phone"></span> 0724 77 00 07</p>
+                                <p><a href="tel: +40724770007"><span class="fa fa-phone"></span> 0724 77 00 07</a></p>
                             </div>
                             <div class="col-md-4 column-footer">
                                 <h2 style="font-weight: bold;">Adres&#259;</h2>
