--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@
     <!-- Tangerine for small title -->
     <link href='https://fonts.googleapis.com/css?family=Tangerine' rel='stylesheet' type='text/css'>
 
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script>
+        $(function () {
+            $("#footer").load("footer.html");
+        });
+    </script>
 </head>
 
 <body>
@@ -1511,46 +1517,7 @@
     <!-- google map -->
 
     <!-- footer -->
-    <footer id="gp-footer">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12">
-                    <div class="gp-footer-area">
-                        <div class="col-md-12 no-padding text-center" style="font-weight: bold; margin-bottom: 16px;">
-                            <div class="col-md-4 column-footer">
-                                <h2 style="font-weight: bold;">Program</h2>
-                                <p><span class="fa fa-clock-o"></span> Zilnic: 10 - 22</p>
-                                <p>Weekend: 10 - 23</p>
-                            </div>
-                            <div class="col-md-4 column-footer">
-                                <h2 style="font-weight: bold;">Contact</h2>
-                                <p><a href="tel: +40724770007"><span class="fa fa-phone"></span> 0724 77 00 07</a></p>
-                            </div>
-                            <div class="col-md-4 column-footer">
-                                <h2 style="font-weight: bold;">Adres&#259;</h2>
-                                <p><span class="fa fa-map-marker"></span> Str. Viitorului, nr. 24C</p>
-                                <p>(vis-a-vis de Piscina Noa)</p>
-                            </div>
-                        </div>
-                        <div class="col-md-12 no-padding gp-footer-end" style="padding-top: 16px;">
-                            <div class="gp-footer-copyright">
-                                <p class="no-margin">&copy; 2019 Garden Pizza Craiova.</p>
-                            </div>
-                            <div class="gp-footer-social">
-                                <a href="https://www.facebook.com/Garden-Pizza-462083171257729/">
-                                    <span class="fa fa-facebook"></span></a>
-                                <a href="https://website-4138154070103958998182-pizzarestaurant.business.site">
-                                    <span class="fa fa-google-plus"></span></a>
-                                <a href="#">
-                                    <span class="fa fa-instagram"></span></a>
-                            </div>
-                        </div>
-
-                    </div>
-                </div>
-            </div>
-        </div>
-    </footer>
+    <div id="footer"></div>
     <!-- footer -->
 
     <!-- jQuery library -->
