despre tel footer

--- a/despre.html
+++ b/despre.html
@@ -140,7 +140,7 @@
                             </div>
                             <div class="col-md-4 column-footer">
                                 <h2 style="font-weight: bold;">Contact</h2>
-                                <p><span class="fa fa-phone"></span> 0724 77 00 07</p>
+                                <p><a href="tel: +40724770007"><span class="fa fa-phone"></span> 0724 77 00 07</a></p>
                             </div>
                             <div class="col-md-4 column-footer">
                                 <h2 style="font-weight: bold;">Adres&#259;</h2>
