--- a/despre.html
+++ b/despre.html
@@ -52,15 +52,24 @@
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul id="top-menu" class="nav navbar-nav navbar-right gp-main-nav">
                         <li><a href="pizza.html">Pizza</a></li>
-                        <li><a href="meniu.html">Meniu</a></li>
-                        <li><a class="active">Despre</a></li>
+                        <li class="navbar-item-lg">
+                            <div class="gp-dropdown">
+                                <a href="meniu.html" class="gp-dropbtn">Meniu</a>
+                                <div class="gp-dropdown-content">
+                                    <a href="piadine.html">Piadine</a>
+                                    <a href="salate.html">Salate</a>
+                                    <a href="paste.html">Paste</a>
+                                    <a href="platouri.html">Platouri</a>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="navbar-item-md"><a href="piadine.html">Piadine</a></li>
+                        <li class="navbar-item-md"><a href="salate.html">Salate</a></li>
+                        <li class="navbar-item-md"><a href="paste.html">Paste</a></li>
+                        <li class="navbar-item-md"><a href="platouri.html">Platouri</a></li>
+                        <li><a href="despre.html">Despre</a></li>
                         <li><a href="tel: +40724770007">0724 77 00 07</a></li>
-                        <!-- <li><a href="#gp-about-us">ABOUT US</a></li>
-            <li><a href="#gp-restaurant-menu">MENU</a></li>
-            <li><a href="#gp-reservation">RESERVATION</a></li>
-            <li><a href="#gp-gallery">GALLERY</a></li>
-            <li><a href="#gp-chef">OUR CHEFS</a></li>
-            <li><a href="#gp-contact">CONTACT</a></li> -->
+                        <!-- <li><a href="#gp-about-us">ABOUT US</a></li> -->
                     </ul>
                 </div>
             </div>
