--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <!-- Tangerine for small title -->
     <link href='https://fonts.googleapis.com/css?family=Tangerine' rel='stylesheet' type='text/css'>
 
+    <link href='https://fonts.googleapis.com/css?family=Courgette' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Cabin' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Leckerli+One' rel='stylesheet' type='text/css'>
 </head>
@@ -53,24 +54,24 @@
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul id="top-menu" class="nav navbar-nav navbar-right gp-main-nav">
-                        <li><a href="pizza.html">Pizza</a></li>
+                        <li><a href="meniu/pizza.html">Pizza</a></li>
 
                         <li class="navbar-item-lg">
                             <div class="gp-dropdown">
                                 <a href="meniu.html" class="gp-dropbtn">Meniu</a>
                                 <div class="gp-dropdown-content">
-                                    <a href="piadine.html">Piadine</a>
-                                    <a href="salate.html">Salate</a>
-                                    <a href="paste.html">Paste</a>
-                                    <a href="platouri.html">Platouri</a>
+                                    <a href="meniu/piadine.html">Piadine</a>
+                                    <a href="meniu/salate.html">Salate</a>
+                                    <a href="meniu/paste.html">Paste</a>
+                                    <a href="meniu/platouri.html">Platouri</a>
                                 </div>
                             </div>
                         </li>
-                        <li class="navbar-item-md"><a href="piadine.html">Piadine</a></li>
-                        <li class="navbar-item-md"><a href="salate.html">Salate</a></li>
-                        <li class="navbar-item-md"><a href="paste.html">Paste</a></li>
-                        <li class="navbar-item-md"><a href="platouri.html">Platouri</a></li>
-                        
+                        <li class="navbar-item-md"><a href="meniu/piadine.html">Piadine</a></li>
+                        <li class="navbar-item-md"><a href="meniu/salate.html">Salate</a></li>
+                        <li class="navbar-item-md"><a href="meniu/paste.html">Paste</a></li>
+                        <li class="navbar-item-md"><a href="meniu/platouri.html">Platouri</a></li>
+
                         <li><a href="despre.html">Despre</a></li>
                         <li><a href="tel: +40724770007">0724 77 00 07</a></li>
                         <!-- <li><a href="#gp-about-us">ABOUT US</a></li> -->
@@ -1433,8 +1434,6 @@
     </section>
     <!-- End Chef Section -->
 
-
-
     <!-- Start Contact section -->
     <section id="gp-contact">
         <div class="container">
@@ -1538,6 +1537,8 @@
                             <div class="col-md-4 column-footer">
                                 <h2 style="font-weight: bold;">Contact</h2>
                                 <p><a href="tel: +40724770007"><span class="fa fa-phone"></span> 0724 77 00 07</a></p>
+                                <p>contact@gardenpizza.ro</p>
+                                <!-- <p><span class="fa fa-envelope-o"></span> contact@gardenpizza.ro</p> -->
                             </div>
                             <div class="col-md-4 column-footer">
                                 <h2 style="font-weight: bold;">Adres&#259;</h2>
