Menu page: Pizza

--- a/despre.html
+++ b/despre.html
@@ -7,21 +7,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Garden Pizza</title>
 
-    <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="/assets/favicon.ico" type="image/x-icon">
 
-    <link href="assets/css/font-awesome.css" rel="stylesheet">
-    <link href="assets/css/bootstrap.css" rel="stylesheet">
+    <link href="/assets/css/font-awesome.css" rel="stylesheet">
+    <link href="/assets/css/bootstrap.css" rel="stylesheet">
 
-    <link rel="stylesheet" type="text/css" href="assets/css/slick.css">
-    <link rel="stylesheet" type="text/css" href="assets/css/bootstrap-datepicker.css">
-    <link rel="stylesheet" type="text/css" href="assets/css/magnific-popup.css">
+    <link rel="stylesheet" type="text/css" href="/assets/css/slick.css">
+    <link rel="stylesheet" type="text/css" href="/assets/css/bootstrap-datepicker.css">
+    <link rel="stylesheet" type="text/css" href="/assets/css/magnific-popup.css">
 
-    <link href="style.css" rel="stylesheet">
+    <link href="/style.css" rel="stylesheet">
 
     <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
     <!-- Tangerine for small title -->
     <link href='https://fonts.googleapis.com/css?family=Tangerine' rel='stylesheet' type='text/css'>
 
+    <link href='https://fonts.googleapis.com/css?family=Courgette' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Cabin' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Leckerli+One' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
@@ -46,28 +49,28 @@
                         <span class="icon-bar"></span>
                     </button>
 
-                    <a class="navbar-brand" href="index.html"><img src="assets/img/gp.svg" alt="Logo img"></a>
+                    <a class="navbar-brand" href="/index.html"><img src="/assets/img/gp.svg" alt="Logo img"></a>
 
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul id="top-menu" class="nav navbar-nav navbar-right gp-main-nav">
-                        <li><a href="pizza.html">Pizza</a></li>
+                        <li><a href="/meniu/pizza.html">Pizza</a></li>
 
                         <li class="navbar-item-lg">
                             <div class="gp-dropdown">
-                                <a href="meniu.html" class="gp-dropbtn">Meniu</a>
+                                <a href="/meniu.html" class="gp-dropbtn">Meniu</a>
                                 <div class="gp-dropdown-content">
-                                    <a href="piadine.html">Piadine</a>
-                                    <a href="salate.html">Salate</a>
-                                    <a href="paste.html">Paste</a>
-                                    <a href="platouri.html">Platouri</a>
+                                    <a href="/meniu/piadine.html">Piadine</a>
+                                    <a href="/meniu/salate.html">Salate</a>
+                                    <a href="/meniu/paste.html">Paste</a>
+                                    <a href="/meniu/platouri.html">Platouri</a>
                                 </div>
                             </div>
                         </li>
-                        <li class="navbar-item-md"><a href="piadine.html">Piadine</a></li>
-                        <li class="navbar-item-md"><a href="salate.html">Salate</a></li>
-                        <li class="navbar-item-md"><a href="paste.html">Paste</a></li>
-                        <li class="navbar-item-md"><a href="platouri.html">Platouri</a></li>
+                        <li class="navbar-item-md"><a href="/meniu/piadine.html">Piadine</a></li>
+                        <li class="navbar-item-md"><a href="/meniu/salate.html">Salate</a></li>
+                        <li class="navbar-item-md"><a href="/meniu/paste.html">Paste</a></li>
+                        <li class="navbar-item-md"><a href="/meniu/platouri.html">Platouri</a></li>
 
                         <li><a class="active">Despre</a></li>
                         <li><a href="tel: +40724770007">0724 77 00 07</a></li>
@@ -78,6 +81,14 @@
         </nav>
     </header>
     <!-- header -->
+
+    <!-- google map -->
+    <section id="gp-map">
+        <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4800.953969488684!2d23.864789293730933!3d44.31685116449237!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4752d755d159f809%3A0x7858b5947b3c184d!2sGarden%20Pizza!5e0!3m2!1sen!2sro!4v1569175805114!5m2!1sen!2sro"
+            width="100%" height="100%" frameborder="0" allowfullscreen=""></iframe>
+    </section>
+    <!-- google map -->
 
     <!-- Start About us -->
     <section id="gp-about-us">
@@ -94,7 +105,7 @@
                         <div class="row">
                             <div class="col-md-6">
                                 <div class="gp-about-us-left">
-                                    <img src="assets/img/about-us.png" alt="img">
+                                    <img src="/assets/img/about-us.png" alt="img">
                                 </div>
                             </div>
                             <div class="col-md-6">
@@ -129,13 +140,6 @@
     </section>
     <!-- End About us -->
 
-    <!-- google map -->
-    <section id="gp-map">
-        <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4800.953969488684!2d23.864789293730933!3d44.31685116449237!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4752d755d159f809%3A0x7858b5947b3c184d!2sGarden%20Pizza!5e0!3m2!1sen!2sro!4v1569175805114!5m2!1sen!2sro"
-            width="100%" height="100%" frameborder="0" allowfullscreen=""></iframe>
-    </section>
-    <!-- google map -->
 
     <!-- footer -->
     <footer id="gp-footer">
@@ -152,6 +156,8 @@
                             <div class="col-md-4 column-footer">
                                 <h2 style="font-weight: bold;">Contact</h2>
                                 <p><a href="tel: +40724770007"><span class="fa fa-phone"></span> 0724 77 00 07</a></p>
+                                <p>contact@gardenpizza.ro</p>
+                                <!-- <p><span class="fa fa-envelope-o"></span> contact@gardenpizza.ro</p> -->
                             </div>
                             <div class="col-md-4 column-footer">
                                 <h2 style="font-weight: bold;">Adres&#259;</h2>
@@ -181,21 +187,21 @@
     <!-- footer -->
 
     <!-- jQuery library -->
-    <script src="assets/js/jquery.min.js"></script>
+    <script src="/assets/js/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="assets/js/bootstrap.js"></script>
+    <script src="/assets/js/bootstrap.js"></script>
     <!-- Slick slider -->
-    <script type="text/javascript" src="assets/js/slick.js"></script>
+    <script type="text/javascript" src="/assets/js/slick.js"></script>
     <!-- Counter -->
-    <script type="text/javascript" src="assets/js/simple-animated-counter.js"></script>
+    <script type="text/javascript" src="/assets/js/simple-animated-counter.js"></script>
     <!-- Gallery Lightbox -->
-    <script type="text/javascript" src="assets/js/jquery.magnific-popup.min.js"></script>
+    <script type="text/javascript" src="/assets/js/jquery.magnific-popup.min.js"></script>
     <!-- Date Picker -->
-    <script type="text/javascript" src="assets/js/bootstrap-datepicker.js"></script>
+    <script type="text/javascript" src="/assets/js/bootstrap-datepicker.js"></script>
     <!-- Ajax contact form  -->
-    <script type="text/javascript" src="assets/js/app.js"></script>
+    <script type="text/javascript" src="/assets/js/app.js"></script>
     <!-- Custom js -->
-    <script src="assets/js/custom.js"></script>
+    <script src="/assets/js/custom.js"></script>
 
 </body>
 
