--- a/index.html
+++ b/index.html
@@ -817,7 +817,8 @@
                                                                 <div class="media-left">
                                                                     <a href="#">
                                                                         <img class="media-object"
-                                                                            src="/assets/img/menu/item-10.jpg" alt="img">
+                                                                            src="/assets/img/menu/item-10.jpg"
+                                                                            alt="img">
                                                                     </a>
                                                                 </div>
                                                                 <div class="media-body">
@@ -878,7 +879,8 @@
                                                                 <div class="media-left">
                                                                     <a href="#">
                                                                         <img class="media-object"
-                                                                            src="/assets/img/menu/item-10.jpg" alt="img">
+                                                                            src="/assets/img/menu/item-10.jpg"
+                                                                            alt="img">
                                                                     </a>
                                                                 </div>
                                                                 <div class="media-body">
