--- a/despre.html
+++ b/despre.html
@@ -7,16 +7,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Garden Pizza</title>
 
-    <link rel="shortcut icon" href="/assets/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
 
-    <link href="/assets/css/font-awesome.css" rel="stylesheet">
-    <link href="/assets/css/bootstrap.css" rel="stylesheet">
+    <link href="assets/css/font-awesome.css" rel="stylesheet">
+    <link href="assets/css/bootstrap.css" rel="stylesheet">
 
-    <link rel="stylesheet" type="text/css" href="/assets/css/slick.css">
-    <link rel="stylesheet" type="text/css" href="/assets/css/bootstrap-datepicker.css">
-    <link rel="stylesheet" type="text/css" href="/assets/css/magnific-popup.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/slick.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/bootstrap-datepicker.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/magnific-popup.css">
 
-    <link href="/style.css" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
 
     <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
     <!-- Tangerine for small title -->
@@ -49,28 +49,28 @@
                         <span class="icon-bar"></span>
                     </button>
 
-                    <a class="navbar-brand" href="/index.html"><img src="/assets/img/gp.svg" alt="Logo img"></a>
+                    <a class="navbar-brand" href="index.html"><img src="assets/img/gp.svg" alt="Logo img"></a>
 
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul id="top-menu" class="nav navbar-nav navbar-right gp-main-nav">
-                        <li><a href="/meniu/pizza.html">Pizza</a></li>
+                        <li><a href="meniu/pizza.html">Pizza</a></li>
 
                         <li class="navbar-item-lg">
                             <div class="gp-dropdown">
-                                <a href="/meniu.html" class="gp-dropbtn">Meniu</a>
+                                <a href="meniu.html" class="gp-dropbtn">Meniu</a>
                                 <div class="gp-dropdown-content">
-                                    <a href="/meniu/piadine.html">Piadine</a>
-                                    <a href="/meniu/salate.html">Salate</a>
-                                    <a href="/meniu/paste.html">Paste</a>
-                                    <a href="/meniu/platouri.html">Platouri</a>
+                                    <a href="meniu/piadine.html">Piadine</a>
+                                    <a href="meniu/salate.html">Salate</a>
+                                    <a href="meniu/paste.html">Paste</a>
+                                    <a href="meniu/platouri.html">Platouri</a>
                                 </div>
                             </div>
                         </li>
-                        <li class="navbar-item-md"><a href="/meniu/piadine.html">Piadine</a></li>
-                        <li class="navbar-item-md"><a href="/meniu/salate.html">Salate</a></li>
-                        <li class="navbar-item-md"><a href="/meniu/paste.html">Paste</a></li>
-                        <li class="navbar-item-md"><a href="/meniu/platouri.html">Platouri</a></li>
+                        <li class="navbar-item-md"><a href="meniu/piadine.html">Piadine</a></li>
+                        <li class="navbar-item-md"><a href="meniu/salate.html">Salate</a></li>
+                        <li class="navbar-item-md"><a href="meniu/paste.html">Paste</a></li>
+                        <li class="navbar-item-md"><a href="meniu/platouri.html">Platouri</a></li>
 
                         <li><a class="active">Despre</a></li>
                         <li><a href="tel: +40724770007">0724 77 00 07</a></li>
@@ -105,7 +105,7 @@
                         <div class="row">
                             <div class="col-md-6">
                                 <div class="gp-about-us-left">
-                                    <img src="/assets/img/about-us.png" alt="img">
+                                    <img src="assets/img/about-us.png" alt="img">
                                 </div>
                             </div>
                             <div class="col-md-6">
@@ -187,21 +187,21 @@
     <!-- footer -->
 
     <!-- jQuery library -->
-    <script src="/assets/js/jquery.min.js"></script>
+    <script src="assets/js/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="/assets/js/bootstrap.js"></script>
+    <script src="assets/js/bootstrap.js"></script>
     <!-- Slick slider -->
-    <script type="text/javascript" src="/assets/js/slick.js"></script>
+    <script type="text/javascript" src="assets/js/slick.js"></script>
     <!-- Counter -->
-    <script type="text/javascript" src="/assets/js/simple-animated-counter.js"></script>
+    <script type="text/javascript" src="assets/js/simple-animated-counter.js"></script>
     <!-- Gallery Lightbox -->
-    <script type="text/javascript" src="/assets/js/jquery.magnific-popup.min.js"></script>
+    <script type="text/javascript" src="assets/js/jquery.magnific-popup.min.js"></script>
     <!-- Date Picker -->
-    <script type="text/javascript" src="/assets/js/bootstrap-datepicker.js"></script>
+    <script type="text/javascript" src="assets/js/bootstrap-datepicker.js"></script>
     <!-- Ajax contact form  -->
-    <script type="text/javascript" src="/assets/js/app.js"></script>
+    <script type="text/javascript" src="assets/js/app.js"></script>
     <!-- Custom js -->
-    <script src="/assets/js/custom.js"></script>
+    <script src="assets/js/custom.js"></script>
 
 </body>
 
