--- a/meniu/pizza.html
+++ b/meniu/pizza.html
@@ -82,7 +82,7 @@
     </header>
     <!-- header -->
 
-    <main style="margin-top: 90px;">
+    <main class="main-wrapper">
         <section class="gp-menu-wrapper">
             <div class="container">
                 <div class="row">
