--- a/despre.html
+++ b/despre.html
@@ -83,7 +83,7 @@
     <!-- header -->
 
     <!-- google map -->
-    <section id="gp-map">
+    <section id="gp-map" class="main-wrapper">
         <iframe
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4800.953969488684!2d23.864789293730933!3d44.31685116449237!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4752d755d159f809%3A0x7858b5947b3c184d!2sGarden%20Pizza!5e0!3m2!1sen!2sro!4v1569175805114!5m2!1sen!2sro"
             width="100%" height="100%" frameborder="0" allowfullscreen=""></iframe>
