left-image-right

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                         <li class="navbar-item-md gp-switch-tel"><a href="tel: +40724770007">0724 77 00 07</a></li>
                         <li class="navbar-item-md gp-switch-tel"><a href="tel: +40767074848">0767 07 48 48</a></li>
                         <li class="navbar-item-md gp-switch-tel"><a href="tel: +40745506699">0745 50 66 99</a></li>
-                        
+
                         <!-- <li><a href="#gp-about-us">ABOUT US</a></li> -->
                     </ul>
                 </div>
@@ -148,6 +148,42 @@
         </div>
     </section>
     <!-- End About us -->
+
+    <section class="cook-delecious">
+        <div class="container">
+            <div class="container-fluid">
+                <div class="col-md-3 col-md-offset-1">
+                    <div class="first-image">
+                        <img src="assets/img/cook_01.jpg" alt="">
+                    </div>
+                </div>
+
+                <div class="col-md-4">
+                    <div class="cook-content">
+                        <h4>
+                            <i class="fa fa-angle-double-right"></i>
+                            Noi g&#259;tim
+                            <i class="fa fa-angle-double-left"></i>
+                        </h4>
+                        <h4>
+                            <i class="fa fa-angle-double-right"></i>
+                            Noi livr&#259;m
+                            <i class="fa fa-angle-double-left"></i>
+                        </h4>
+                        <div class="contact-content">
+                            <h6>Alege ce ai poft&#259;</h6>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-3">
+                    <div class="second-image">
+                        <img src="assets/img/cook_02.jpg" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <!-- Start Counter Section -->
     <section id="gp-counter">
